Force caret painting at low DPI

The caret width must be forced non-zero when the DPI is lower than 1.
Widths less than 1 do not paint.

R=pdr@chromium.org
BUG=731643

Change-Id: I05953a3a029253644e801058d83988b4822418ba
Reviewed-on: https://chromium-review.googlesource.com/740063
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512280}
Former-commit-id: f46b7b6ef94461ac0cc4247bbd829576ed8c89b3